# AI_Hub

./: README.md  index.html  package-lock.json  package.json  settings.js  vite.config.js
doc/基于Rust的大模型Windows桌面应用_项目文档/: 基于Rust的大模型Windows桌面应用_项目文档.md
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: About.vue  Home.vue  Home1.vue  Navigation.vue  Preferences.vue  PromptTemplates.vue  Sidebar.vue
src/pages/: AIDrawing.vue  AudioProcessing.vue  DesignTools.vue  DevTools.vue  DomesticLLM.vue  DomesticModels.vue  Favorites.vue  ForeignLLM.vue  MultimodalLLM.vue  MultimodalModels.vue  PromptPage.vue  VideoCreation.vue
src/router/: index.js
